[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 380 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
custom_fonts/font = SubResource( 3 )
text = "Player Score"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 640.0
custom_fonts/font = SubResource( 4 )
text = "Opponent  Score"
align = 1
valign = 1

[node name="CountDownLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
custom_fonts/font = SubResource( 5 )
text = "Count"
align = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 350 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="WallDown" type="StaticBody2D" parent="."]
position = Vector2( 0, 740 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDown"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245, 350 )

[node name="Ball" parent="." groups=["BallGroup"] instance=ExtResource( 3 )]
position = Vector2( 640, 350 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -5, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -10, 360 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 5, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 1290, 360 )
shape = SubResource( 2 )

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
